feat: readme.md, nodemon.json, update swagger docs
Created a readme.md, added nodemon.json to restart when files changes especially yaml, added endpoints to swagger
